--- a/standard.bib
+++ b/standard.bib
@@ -463,3 +463,66 @@ pages={340-344},
 keywords={feature extraction;image classification;image texture;mammography;medical image processing;principal component analysis;transforms;tumours;KNN classifier;ROI;Shearlet transform;T-value;breast tumor;k-nearest neighbor classifier;kernel princial component analysis;mammogram image classification;region of interest;shearlet-KPCA method;texture feature extraction;Cancer;Computers;Feature extraction;Kernel;Mammography;Principal component analysis;Transforms;classifier;feature extraction;kernel principal component analysis;mammogram;shearlet transform}, 
 doi={10.1109/ICCOINS.2016.7783238}, 
 month={Aug},}
+
+@article{Shao2009,
+abstract = {Kernel principal component analysis (KPCA) has recently proven to be a powerful dimensionality reduction tool for monitoring nonlinear processes with numerous mutually correlated measured variables. However, the performance of KPCA-based monitoring method largely depends on its kernel function which can only be empirically selected from finite candidates assuming that some faulty process samples are available in the off-line modeling phase. Moreover, KPCA works at high computational cost in the on-line monitoring phase due to its dense expansions in terms of kernel functions. To overcome these deficiencies, this paper proposes a new process monitoring technique comprising fault detection and identification based on a novel dimensionality reduction method named maximum variance unfolding projections (MVUP). MVUP firstly applies the recently proposed manifold learning method maximum variance unfolding (MVU) on training samples, which can be seen as a special variation of KPCA whose kernel matrix is automatically learned such that the underlying manifold structure of training samples is "unfolded" in the reduced space and hence the boundary of distribution region of training samples is preserved. Then MVUP uses linear regression to find the projection that best approximates the implicit mapping from training samples to their lower dimensional embedding learned by MVU. Simulation results on the benchmark Tennessee Eastman process show that MVUP-based process monitoring method is a good alternative to KPCA-based monitoring method.},
+author = {Shao, Ji-Dong and Rong, Gang},
+doi = {http://dx.doi.org/10.1016/j.eswa.2009.03.042},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Nonlinear process monitoring based on maximum variance unfolding projections.pdf:pdf},
+isbn = {0957-4174},
+issn = {0957-4174},
+journal = {Expert Systems with Applications},
+keywords = {Dimensionality reduction,Kernel matrix learning,Linear regression,Maximum variance unfolding projections,Process monitoring},
+number = {8},
+pages = {11332--11340},
+publisher = {Elsevier Ltd},
+title = {{Nonlinear process monitoring based on maximum variance unfolding projections}},
+volume = {36},
+year = {2009}
+}
+
+@INPROCEEDINGS{Pune2016, 
+author={S. Khobragade and A. Tiwari and C. Y. Patil and V. Narke}, 
+booktitle={2016 IEEE 1st International Conference on Power Electronics, Intelligent Control and Energy Systems (ICPEICES)}, 
+title={Automatic detection of major lung diseases using Chest Radiographs and classification by feed-forward artificial neural network}, 
+year={2016}, 
+pages={1-5}, 
+keywords={cancer;diagnostic radiography;feature extraction;image classification;lung;medical image processing;neural nets;WHO;artificial neural network technique;chest radiograph;feed-forward artificial neural network;image classification;lung cancer;lung disease detection;lung feature extraction;mortality rate;tuberculosis;Back;Diseases;Image recognition;Intelligent control;Lungs;Neural networks;Pattern recognition;Artificial Neural Network;Chest Radiographs;Feature Extraction;Lung Cancer;Pneumonia;TB}, 
+doi={10.1109/ICPEICES.2016.7853683}, 
+month={July},}
+
+@INPROCEEDINGS{Baqqar2012, 
+author={M. Baqqar and Tie Wang and M. Ahmed and Fengshou Gu and Joan Lu and A. Ball}, 
+booktitle={Proceedings of 2012 UKACC International Conference on Control}, 
+title={A general regression neural network model for gearbox fault detection using motor operating parameters}, 
+year={2012}, 
+pages={584-588}, 
+keywords={condition monitoring;data analysis;data models;fault diagnosis;fracture;gears;mechanical engineering computing;neural nets;power transmission (mechanical);regression analysis;GRNN;abnormal gearbox condition;analytical tool;control parameter;data model;driving motor;electrical current;gear tooth breakage;gearbox condition monitoring;gearbox fault detection;gearbox monitoring method;general regression neural network model;industrial process;load setting;machine control process;measuring technique;model based approach;motor operating parameters;nonlinear connection capture;temperature;threshold setup;two stage helical gearbox power transmission system;Current measurement;Data models;Fault detection;Gears;Load modeling;Mathematical model;Predictive models;Condition Monitoring;Fault detection;Gearbox;General Regression Neural Network;Static dataset}, 
+doi={10.1109/CONTROL.2012.6334695}, 
+month={Sept},}
+
+@article{Scholkopf2012,
+abstract = {A new method for performing a nonlinear form of Principal Component Analysis is proposed. By the use of integral operator kernelfunctions, one can efficiently compute principal components in highdimensional feature spaces, related to input space by some nonlinearmap; for instance the space of all possible d pixel products in images.We give the derivation of the method and present experimental resultson polynomial feature extraction for pattern recognition.},
+author = {Scholkopf, B and Smola, a J and Muller, K R},
+doi = {10.1162/089976698300017467},
+file = {:C$\backslash$:/Users/Trouble Maker/Documents/2017/Witwatersrand/Masters/Reading/Papers/Kernel Principal Component Analysis.pdf:pdf},
+isbn = {08997667 (ISSN)},
+issn = {0899-7667},
+journal = {Computer Vision And Mathematical Methods In Medical And Biomedical Image Analysis},
+pages = {583--588},
+pmid = {21939901},
+title = {{Kernel Principal Component Analysis}},
+volume = {1327},
+year = {2012}
+}
+
+@INPROCEEDINGS{Li_Liang2016, 
+author={Y. Li and W. Liang and Y. Zhang and H. An and J. Tan}, 
+booktitle={2016 38th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)}, 
+title={Automatic Lumbar Vertebrae Detection Based on Feature Fusion Deep Learning for Partial Occluded C-arm X-ray Images}, 
+year={2016}, 
+pages={647-650}, 
+keywords={computational complexity;computerised tomography;image fusion;image segmentation;image texture;learning (artificial intelligence);medical image processing;neural nets;prosthetics;surgery;CNN;DRR;FFDL;Gabor kernel;IG-MISS;ROI;abnormal pathological condition;automatic lumbar vertebrae detection;automatic segmentation;computational complexity;convolutional neural network model;feature fusion deep learning model;image-guided minimally invasive spine surgery;imaging angle;lumbar vertebrae X-ray images;lumbar vertebrae contour;lumbar vertebrae texture;partial occluded C-arm X-ray images;sobel kernel;surgical implants;training data;Computational modeling;Feature extraction;Kernel;Machine learning;Pathology;Surgery;X-ray imaging}, 
+doi={10.1109/EMBC.2016.7590785}, 
+ISSN={1557-170X}, 
+month={Aug},}
